--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,10 @@
 /.DS_Store
 /*/.DS_Store
 /_work
+/_work/**
 
 # Ignore media files
-/media/*
+/media/**
 !/media/audio/.keep
 !/media/video/.keep
 !/media/images/.keep
