--- a/.gitignore
+++ b/.gitignore
@@ -9,12 +9,14 @@
 /_work/**
 
 # Ignore media files
-/media/**
+/media/audio/**
 !/media/audio/.keep
+/media/video/**
 !/media/video/.keep
+/media/images/**
 !/media/images/.keep
 !/media/images/readme
-!/media/images/readme/*
+!/media/images/readme/**
 
 # Ignore demo JS
 /js/demo
