add some automation

--- a/.gitignore
+++ b/.gitignore
@@ -18,14 +18,13 @@
 !/media/images/readme
 !/media/images/readme/**
 
-# Ignore demo JS
+# Ignore demo
 /js/demo
 /*/demo
 /demo.html
+/*demo.html
+/*demo/**
 
 # ignore zips
 **/*.zip
 *.zip
-
-/*demo
-/*demo/**
